services/heimdall/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
  tls:
    secretName: test-local-hohepa-dev-tls
